--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
     <%= yield %>
     <%= yield :body_scripts %>
     <!-- controller/action.js auto import code -->
-    <%= javascript_pack_tag "#{controller_name}/#{action_name}.js" %>
+    <% if File.exist?("#{controller_name}/#{action_name}.js") %>
+      <%= javascript_pack_tag "#{controller_name}/#{action_name}.js" %>
+    <% end %>
   </body>
 </html>
