--- a/app/views/auth/kakao_info.html.erb
+++ b/app/views/auth/kakao_info.html.erb
@@ -4,6 +4,18 @@
         auth code: <%= @auth_code %>
     </li>
     <li>
+        data: <%= @data %>
+    </li>
+    <li>
+        access_token: <%= @data[:access_token] %>
+    </li>
+    <li>
+        refresh_token: <%= @data[:refresh_token] %>
+    </li>
+    <li>
+        user: <%= @user_info %>
+    </li>
+    <li>
         controller: <%= controller_name %>
     </li>
     <li>
