--- a/app/views/auth/kakao_signup_new.html.erb
+++ b/app/views/auth/kakao_signup_new.html.erb
@@ -4,5 +4,21 @@
     <img src="<%= @profile_image_url %>" alt="" class="rounded-full object-cover" style="width: 100px; height: 100px;">
     <h3 class="text-2xl"><%= @nickname %></h3>
 </div>
+
+<%= form_with scope: :user, url: "/auth/kakao_signup_create", class: "flex flex-col items-center", method: :post do | form | %>
+    <%= form.label :kakao_user_id, "user_id" %>
+    <%= form.text_field :kakao_user_id, value: @user_id %>
+
+    <%= form.label :access_token, "access_token" %>
+    <%= form.text_field :access_token, value: @access_token %>
+
+    <%= form.label :refresh_token, "refresh_token" %>
+    <%= form.text_field :refresh_token, value: @refresh_token %>
+
+    <%= form.label :profile_image_url, "profile_image_url" %>
+    <%= form.text_field :profile_image_url, value: @profile_image_url %>
+
+    <%= form.submit "signup", class: "text-lg border rounded p-2 border-black" %>
+<% end %>
+
 <a href="/auth/kakao_unlink?access_token=<%= @access_token %>">unlink</a>
-<%= @user_info %>
