--- a/app/views/auth/kakao_signup_new.html.erb
+++ b/app/views/auth/kakao_signup_new.html.erb
@@ -1,27 +1,13 @@
-<div class="flex flex-col items-center justify-center space-y-2">
-    <h3 class="text-xl font-bold">회원가입하기</h3>
-    <img src="<%= @profile_image_url %>" alt="" class="rounded-full object-cover" style="width: 100px; height: 100px;">
-    <h3 class="text-2xl"><%= @nickname %></h3>
 
-<%= form_with scope: :user, url: "/auth/kakao_signup_create", class: "pure-form pure-form-stacked", method: :post do | form | %>
-<fieldset>
-
-    <%= form.label :kakao_user_id, "user_id" %>
-    <%= form.text_field :kakao_user_id, value: @user_id %>
-
-    <%= form.label :nickname, "nickname" %>
-    <%= form.text_field :nickname, value: @nickname %>
-
-    <%= form.label :access_token, "access_token" %>
-    <%= form.text_field :access_token, value: @access_token %>
-
-    <%= form.label :refresh_token, "refresh_token" %>
-    <%= form.text_field :refresh_token, value: @refresh_token %>
-
-    <%= form.label :profile_image_url, "profile_image_url" %>
-    <%= form.text_field :profile_image_url, value: @profile_image_url %>
-
-    <%= form.submit "signup", class: "pure-button button-large" %>
-</fieldset>
-<% end %>
+<div class="flex flex-col items-center justify-center space-y-2 h-screen">
+    <img src="<%= @profile_image_url %>" alt="" class="rounded-full object-cover" style="width: 80px; height: 80px;">
+    <h3 class="text-base"><%= @nickname %></h3>
+    <%= form_with scope: :user, url: "/auth/kakao_signup_create", class: "flex flex-col", method: :post do | form | %>
+        <%= form.text_field :kakao_user_id, value: @user_id , type: :hidden %>
+        <%= form.text_field :nickname, value: @nickname, type: :hidden %>
+        <%= form.text_field :access_token, value: @access_token, type: :hidden %>
+        <%= form.text_field :refresh_token, value: @refresh_token, type: :hidden %>
+        <%= form.text_field :profile_image_url, value: @profile_image_url, type: :hidden %>
+        <%= form.submit "signup", class: "" %>
+    <% end %>
 </div>
