--- a/app/views/home/start.html.erb
+++ b/app/views/home/start.html.erb
@@ -7,7 +7,7 @@
 <!-- 카카오톡 로그인 버튼 핸들러 -->
     <%= javascript_pack_tag "auth/kakao_login.js" %>
 <% end %>
-<div class="flex flex-col w-full min-h-screen items-start justify-center p-8 relative">
+<div class="flex flex-col w-full items-start justify-center p-8" style="height: calc(100vh - env(safe-area-inset-bottom));">
     <p class="text-xl">만날 날짜와 시간,</p>
     <p class="text-xl">일일히 물어보기 귀찮으셨죠?</p>
   
@@ -15,8 +15,8 @@
   
     <p class="text-gray-500 text-base">3초만에 카카오톡으로 로그인하고,</p>
     <p class="text-gray-500 text-base">손쉽게 약속 시간을 정해보세요</p>
-  
-    <div id="kakao-login" class="absolute bottom-8 flex flex-row items-center justify-center h-12 bg-black text-white rounded-lg text-lg" style="width: calc(100% - 64px)">
+    
+    <div id="kakao-login" class="fixed flex flex-row items-center justify-center h-12 bg-black text-white rounded-lg text-lg" style="width: calc(100% - 64px); bottom: 0;">
       카카오로 시작하기
     </div>
   </div>
