--- a/app/views/auth/kakao_signup_new.html.erb
+++ b/app/views/auth/kakao_signup_new.html.erb
@@ -1,13 +1,15 @@
 
 <div class="flex flex-col items-center justify-center space-y-2 h-screen">
-    <img src="<%= @profile_image_url %>" alt="" class="rounded-full object-cover" style="width: 80px; height: 80px;">
-    <h3 class="text-base"><%= @nickname %></h3>
+    <img src="<%= @profile_image_url %>" alt="" class="rounded-full object-cover" style="width: 50px; height: 50px;">
+    <div class="pt-2 pb-6">
+        <b><%= @nickname %></b>님으로 시작합니다
+    </div>
     <%= form_with scope: :user, url: "/auth/kakao_signup_create", class: "flex flex-col", method: :post do | form | %>
         <%= form.text_field :kakao_user_id, value: @user_id , type: :hidden %>
         <%= form.text_field :nickname, value: @nickname, type: :hidden %>
         <%= form.text_field :access_token, value: @access_token, type: :hidden %>
         <%= form.text_field :refresh_token, value: @refresh_token, type: :hidden %>
         <%= form.text_field :profile_image_url, value: @profile_image_url, type: :hidden %>
-        <%= form.submit "signup", class: "" %>
+        <%= form.submit "회원가입하기", class: "bg-black text-white rounded-lg px-10 py-2" %>
     <% end %>
 </div>
