:sparkles: add dev controller

--- a/app/views/home/_nav.html.erb
+++ b/app/views/home/_nav.html.erb
@@ -13,7 +13,7 @@
         color: rgba(0,0,0,0.75);
     }
 </style>
-<script>
+<!-- <script>
     const nav = document.getElementById('nav')
     const navElements = document.querySelectorAll("#nav > li")
-</script>
+</script> -->
