:sparkles: feat: fix bug

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,10 @@
         <%= flash[:notice] %>
       </div>
     <% end %>
-    <%= yield %>
+    <div class="p-4">
+
+      <%= yield %>
+    </div>
     <%= yield :body_scripts %>
   </body>
 </html>
