--- a/app/views/dev/users.html.erb
+++ b/app/views/dev/users.html.erb
@@ -1,4 +1,4 @@
-<table class="table-auto border-collapse w-full text-sm">
+<table>
     <thead>
         <tr>
             <th>Id</th>
@@ -8,14 +8,14 @@
     </thead>
     <tbody>
         <% @users.each do |user| %>
-            <tr>
+            <tr style="line-height: 40px;">
                 <td><%= user.id %></td>
                 <td><%= user.nickname %></td>
                 <td>
-                    <% if session[:current_user_id] == user.id %>
-                        <button class="border p-1">Logout</button>
+                    <% if session[:current_user_id].to_s == user.id.to_s %>
+                        <a class="border p-1" href="/dev/logout_user?id=<%= user.id %>">Logout</a>
                     <% else %>
-                        <button class="border p-1">Login</button>
+                        <a class="border p-1" href="/dev/login_user?id=<%= user.id %>">Login</a>
                     <% end %>
                     <a class="border p-1" href="/dev/destroy_user?id=<%= user.id %>">Destroy</a>
                 </td>
@@ -23,6 +23,12 @@
         <% end %>        
     </tbody>
 </table>
+<div>
+    current_user_id: <%= session[:current_user_id] %>
+</div>
+<div>
+    is_logged_in: <%= is_logged_in %>
+</div>
 <style>
     table * {
         text-align: center;
