--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -31,6 +31,11 @@
     <%= form.number_field :end_hour %>
   </div>
 
+  <div class="field">
+    <%= form.label :owner_id %>
+    <%= form.collection_select(:owner_id, User.all, :id, :nickname) %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
